# Shoots.Host

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRACT.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cmake/: Options.cmake  Warnings.cmake
codex/: maintenance.sh  setup.sh
docs/: CONTRACT.md  HOMEBREW.md  INSTALL.md  OPERATIONS.md  TLS.md
include/: shoots_host_version.h
scripts/: build_host.sh  check_legacy_paths.sh  ci_local.sh  gen_systemd_unit.sh  install_host.sh  load_test_livez.sh  os_build_smoke.sh  package_host.ps1  package_host.sh  release_check.sh  run_host.ps1  run_host.sh  run_local.ps1  setup_provider_prefix.sh
scripts/win/: build.ps1  run.ps1
src/: main.cpp
src/http/: error_envelopes.cpp  error_envelopes.h
src/jobs/: job_store.cpp  job_store.h
src/provider_bridge/: provider_bridge.cpp  provider_bridge.h
src/routes/: routes.cpp  routes.h
src/server/: app_state.cpp  app_state.h  http_server.cpp  http_server.h  json_writer.cpp  json_writer.h  logging.cpp  logging.h  request_id.cpp  request_id.h
tests/: host_smoke.sh
tests/contract/: host_golden_snapshots.cpp  host_header_snapshot_test.cpp  host_log_line_test.cpp  host_metrics_content_type_test.cpp
tests/golden/: error-bad-request.json  error-conflict-not-ready.json  error-not-found.json  error-payload-too-large.json  error-too-many-requests.json  error-unauthorized.json  header-request-id.txt  health.json  livez.json  metrics-prometheus.txt  models.json  print-config.json  readyz-not-ready.json  readyz-ready.json  status.json  submit-build.json  submit-chat.json  submit-tool.json  templates.json
